update: add icons and improve Watanabe You clipped image

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="popup.css" type="text/css">
-    <title>My Extension</title>
+    <title>生えてくるスクールアイドルを選択</title>
 </head>
 
 <body>
